Fix issue with overflowing and remove the height 100% since its not really needed if I have content

--- a/blog.css
+++ b/blog.css
@@ -1,22 +1,23 @@
 html {
-	height: 100%;
+	/*height: 100%;*/
 }
 
 body {
 	border-top: 5px solid tomato;
 	margin: 0;
 	padding: 0;
-	height: 100%;
+	/*height: 100%;*/
 }
 
 .main {
-	height: 100%;
+	/*height: 100%;*/
 	width: 80%;
 	max-width: 1000px;
 	background: #959490;
 	margin: 0 auto;
 	position: relative;
 	padding-bottom: 50px;
+	overflow: hidden;
 }
 
 .sidebar {
